Fixed like button alignment

--- a/sass/components/_like.scss
+++ b/sass/components/_like.scss
@@ -1,4 +1,6 @@
 .like {
+    width: 22px;
+    height: 22px;
     position: relative;
 
     &_heart {
