--- a/sass/pages/home/sections/_restaurants.scss
+++ b/sass/pages/home/sections/_restaurants.scss
@@ -81,8 +81,6 @@
         }
 
         &_heart {
-            width: 22px;
-            height: 22px;
             margin-right: 10px;
             @include resetLink;
             @include transition;
